--- a/styles/Players.module.css
+++ b/styles/Players.module.css
@@ -1,10 +1,32 @@
 .players {
   text-align: center;
   padding-top: 50px;
+  min-height: 622px;
+  position: relative;
 }
 
-.playerList {
-  padding-top: 7px;
+.table {
+  width: 1000px;
+  margin: 0 auto;
+  border-collapse: collapse;
+}
+
+.table th,
+.table td {
+  padding:3px 0;
+}
+
+.table th {
+  text-transform: uppercase;
+  width: 25%;
+}
+
+.table th:first-child {
+  width: 5%;
+}
+
+.playerList:nth-child(odd) {
+  background-color: grey;
 }
 
 .active a {
