--- a/styles/TeamDetails.module.css
+++ b/styles/TeamDetails.module.css
@@ -1,5 +1,63 @@
+@import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 70px;
+  margin: 0 auto;
+  max-width: 1400px;
+}
+
+.title {
+  font-family: "Special Elite", cursive;
+}
+
+.title h1 {
+  font-size: 4em;
+}
+
+.title p {
+  font-size: 2em;
+  text-align: center;
+}
+
+.logo {
+  margin: 30px 0;
+}
+
+.conference,
+.division,
+.city {
+  width: 400px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.conference p,
+.division p,
+.city p {
+  font-size: 1.7em;
+  padding: 5px 0;
+}
+
+.conference span,
+.division span,
+.city span {
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+
+.history span {
+  margin-left: 40px;
+  display: inline-block;
+}
+
+.history span {
+  margin-top: 20px;
+  text-indent: 70px;
+  font-size: 1.1em;
+  line-height: 1.4;
 }
