--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -7,7 +7,7 @@
 }
 
 .title {
-  font-size: 3em;
+  font-size: 2.5em;
   text-align: center;
   padding-top: 50px;
 }
@@ -25,14 +25,78 @@
   margin: 50px 0;
 }
 
+.git:hover,
+.linken:hover {
+  transition: 0.4s;
+  color: rgba(240, 240, 240, 0.4);
+}
+
 .git {
   margin-right: 100px;
 }
 
+.fieldset {
+  position: relative;
+  border: none;
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 50px 0;
+}
+
+.legend {
+  text-align: center;
+  font-size: 2em;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
 .label {
-    display: block;
+  font-size: 1.5em;
+}
+
+.input {
+  background-color: inherit;
+  border: 1px solid rgb(212, 212, 212);
+  color: rgb(240, 240, 240);
+  font-size: 1.2em;
+  padding: 10px 5px;
+  width: 350px;
+  outline: none;
+  border-radius: 4px;
+}
+
+.textarea {
+  border-radius: 4px;
+  resize: none;
+  padding: 10px 5px;
+  font-size: 1.4em;
+  color: rgb(240, 240, 240);
+  background-color: inherit;
+  width: 700px;
+  height: 150px;
+  border: 1px solid rgb(212, 212, 212);
+}
+
+.textarea::placeholder {
+  color: rgba(240, 240, 240, 0.8);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .button {
-    display: block;
+  display: inline-block;
+  border-radius: 4px;
+  padding: 10px 40px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
+
