--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -4,12 +4,12 @@
   font-family: "Roboto Mono", sans-serif;
   margin: 0 auto;
   max-width: 1400px;
+  padding: 50px 0;
 }
 
 .title {
   font-size: 2.5em;
   text-align: center;
-  padding-top: 50px;
 }
 
 .contact {
